✨ Update meta description for improved clarity and consistency

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les P'tits Trinquat - Association de Parents d'Élèves | Montpellier</title>
-    <meta name="description" content="Association de parents d'élèves du groupe scolaire Anne Frank – Charles Dickens à Montpellier. Événements, comptes-rendus et vie scolaire." />
+    <meta name="description" content="Association de parents d'élèves du groupe scolaire Anne Frank - Charles Dickens à Montpellier. Événements, comptes-rendus et vie scolaire." />
     <meta name="author" content="Les P'tits Trinquat" />
     <meta name="keywords" content="association parents élèves, école Montpellier, Anne Frank, Charles Dickens, vie scolaire, événements scolaires" />
 
     <meta property="og:title" content="Les P'tits Trinquat - Association de Parents d'Élèves" />
-    <meta property="og:description" content="Grandir ensemble pour nos enfants ! Association de parents d'élèves du groupe scolaire Anne Frank – Charles Dickens à Montpellier." />
+    <meta property="og:description" content="Tous unis pour nos petits ! Association de parents d'élèves du groupe scolaire Anne Frank - Charles Dickens à Montpellier." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:locale" content="fr_FR" />
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/og-image.png" />
     <meta name="twitter:title" content="Les P'tits Trinquat - Association de Parents d'Élèves" />
-    <meta name="twitter:description" content="Grandir ensemble pour nos enfants ! Association de parents d'élèves à Montpellier." />
+    <meta name="twitter:description" content="Tous unis pour nos petits ! Association de parents d'élèves à Montpellier." />
 
     <link rel="canonical" href="https://ptits-trinquat.fr" />
   </head>
