Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Les P'tits Trinquat - Association de Parents d'Élèves" />
     <meta property="og:description" content="Tous unis pour nos petits ! Association de parents d'élèves du groupe scolaire Anne Frank - Charles Dickens à Montpellier." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/logoAsso.jpg" />
     <meta property="og:locale" content="fr_FR" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/logoAsso.jpg" />
     <meta name="twitter:title" content="Les P'tits Trinquat - Association de Parents d'Élèves" />
     <meta name="twitter:description" content="Tous unis pour nos petits ! Association de parents d'élèves à Montpellier." />
 
