add FAQ questions full, open the CR page without acces code now. mise en forme des pages et des layouts.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:title" content="Les P'tits Trinquat - Association de Parents d'Élèves" />
     <meta name="twitter:description" content="Tous unis pour nos petits ! Association de parents d'élèves à Montpellier." />
 
-    <link rel="canonical" href="https://ptits-trinquat.fr" />
+    <link rel="canonical" href="https://www.lespetitstrinquat.fr" />
   </head>
 
   <body>
