--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
     <meta name="twitter:description" content="Tous unis pour nos petits ! Association de parents d'élèves à Montpellier." />
 
     <link rel="canonical" href="https://www.lespetitstrinquat.fr" />
+
+    <!-- Matomo -->
+    <script>
+      var _paq = window._paq = window._paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="https://lespetitstrinquat.matomo.cloud/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '1']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src='https://cdn.matomo.cloud/lespetitstrinquat.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Matomo Code -->
   </head>
 
   <body>
