feat: Add favicon declaration and theme color to index.html for Google Search visibility

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
     <link rel="canonical" href="https://www.lespetitstrinquat.fr" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logoAsso.jpg" />
+    <meta name="theme-color" content="#FF8C42" />
+
     <!-- Matomo -->
     <script>
       var _paq = window._paq = window._paq || [];
