feat: add DocumentsUtiles page for managing and downloading school documents Resize Open Graph Image Add LPC logo Add affiche events actualitesEvents

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/logoAsso.jpg" />
+  <link rel="apple-touch-icon" href="/logoAsso.png" />
   <meta name="theme-color" content="#FF8C42" />
 
   <!-- Matomo -->
